# ADQ-protocolo

./: CLAUDE.md  CMakeLists.txt  PROJECT_STATUS.md  README.md  UPDATE_AGENT_GUIDE.md
.claude/agents/: update-project-status.md
agents/: AGENTS.md
arduino/ADQProtocol/: library.properties
arduino/ADQProtocol/examples/BaseRxDemo/: BaseRxDemo.ino
arduino/ADQProtocol/examples/NodeTxDemo/: NodeTxDemo.ino
arduino/ADQProtocol/src/: ADQProtocol.cpp  ADQProtocol.h  adq_codec.h  adq_time_sync.c  adq_time_sync.h
docs/: README.md  arduino-integration.md  engineering-readiness-review.md  glossary.md  implementation-roadmap-v1.md  research-sources.md
docs/adr/: ADR-0001-radio-and-mac.md
docs/architecture/: system-architecture-v1.md
docs/protocol/: lxrs-comparativa-adq-v1.md  protocol-educational-diagrams.md  protocol-name-proposals.md  protocol-v0.1.md  protocol-v1.md
docs/templates/: project-status-sprint-template.md
docs/testing/: test-plan-v1.md
firmware/base/: CMakeLists.txt
firmware/base/include/: base_app.h
firmware/base/src/: base_app.c  main.c
firmware/common/: CMakeLists.txt
firmware/common/include/: adq_ack.h  adq_crc16.h  adq_fragment.h  adq_link.h  adq_mac_scheduler.h  adq_protocol.h  adq_rf_hal.h  adq_ring_buffer.h  adq_stream_parser.h
firmware/common/src/: adq_ack.c  adq_codec.c  adq_crc16.c  adq_fragment.c  adq_link.c  adq_mac_scheduler.c  adq_rf_hal.c  adq_ring_buffer.c  adq_stream_parser.c  adq_time_sync.c
firmware/node/: CMakeLists.txt
firmware/node/include/: node_app.h
firmware/node/src/: main.c  node_app.c
hardware/: README.md
tests/unit/: test_ack.c  test_crc16.c  test_fragment.c  test_link_params.c  test_mac_scheduler.c  test_node_slot.c  test_node_txn.c  test_rf_hal.c  test_stream_parser.c
tools/host-cli/: parse_frames.py
tools/rf-lab/: README.md
